package com.lld.interviewquestions.elevator.enums;

public enum DoorState {
    DOOR_OPEN,
    DOOR_CLOSED
}
